# GGJ2019-Miskine

./: .gitignore  CMakeLists.txt  GGJ2019.project  Generate_Linux_Codeblocks_Makefiles.sh  README.md  generate_vs2017.bat  generate_vs2017_external.bat
assets/: character_description.txt
assets/Buttons/png/: icones_upgrade_sell.sai  play.sai
assets/Buttons/tga/: game.close.tga  game.move_forward.tga  game.pause.tga  game.play_activate.tga  game.play_desactivate.tga
assets/characters_sprites/: ballon_football.sai  rat.sai
assets/characters_sprites/fille/: fille.sai
assets/characters_sprites/fille/tga/: game.fille_attack_back_04.tga  game.fille_attack_front_02.tga  game.fille_attack_front_05.tga  game.fille_attack_left_01.tga  game.fille_attack_left_03.tga  game.fille_attack_left_04.tga  game.fille_attack_right_01.tga  game.fille_attack_right_03.tga  game.fille_idle_02.tga
assets/characters_sprites/fils/: ballon_football.sai  fils.sai  game.fils_projectile.tga
assets/characters_sprites/fils/TGA/: fils_attack_right_01.tga  game.fils_attack_back_01.tga  game.fils_attack_front_02.tga  game.fils_attack_front_04.tga  game.fils_attack_left_01.tga  game.fils_attack_left_02.tga  game.fils_attack_right_02.tga
assets/characters_sprites/fils/tga/: game.fils_attack_front_01.tga  game.fils_attack_front_03.tga  game.fils_iddle_01.tga  game.fils_iddle_02.tga
assets/characters_sprites/mere/: mere.sai
assets/characters_sprites/mere/png/: mere_attack_front_2.6.sai
assets/characters_sprites/mere/tga/: game.mere_attack_back_01.tga  game.mere_attack_back_02.tga  game.mere_attack_left_01.tga  game.mere_attack_right_02.tga
assets/characters_sprites/pere/: Miskine_01.sai
assets/characters_sprites/pere/tga/: Game_pere_attack_front_01.tga  game.pere_attack_front_01.tga  game.pere_attack_right_01.tga  game.pere_idle_01.tga  game.pere_idle_03.tga  pere_iddle_01.tga
assets/characters_sprites/rat/: rat.sai
assets/characters_sprites/rat/tga/: game.rat_back_01.tga  game.rat_back_02.tga  game.rat_front_01.tga  game.rat_front_02.tga  game.rat_left_01.tga  game.rat_left_02.tga  game.rat_right_01.tga  game.rat_right_02.tga
assets/enemies/spider_chewing-gum/tga/: game.spider_cg_bottom_02.tga  game.spider_cg_left_01.tga  game.spider_cg_left_02.tga  game.spider_cg_right_01.tga  game.spider_cg_top_01.tga
src/Extension/: CMakeLists.txt  Extension.configext  Extension.cpp  Extension.h
src/Game/: Application.cpp  CMakeLists.txt  Game.cpp  Game.h  Game.inl  Inputs.cpp  main.cpp
src/Game/GameStates/: GameState.cpp  GameState.h  GameStateCharacterIntro.cpp  GameStateCharacterIntro.h  GameStateCredits.cpp  GameStateCredits.h  GameStateGame.cpp  GameStateGame.h  GameStateGameOver.cpp  GameStateGameOver.h  GameStateMainMenu.cpp  GameStateMainMenu.h  GameStateSettings.cpp  GameStateSettings.h
src/Plugins/Plugin/: CMakeLists.txt  Plugin.cpp  Plugin.h  PluginFactory.cpp  PluginFactory.h
src/Plugins/Plugin/Players/: IPlayer2EventListener.h  Player2Event.cpp  Player2Event.h  Player2EventManager.cpp  Player2EventManager.h  Player2EventTypeWords.cpp  Player2EventTypeWords.h
src/Plugins/Plugin/World/: Enemy.cpp  Enemy.h  EnemyManager.cpp  IWorldListener.h  World.cpp  World.h
src/Plugins/Plugin/World/Character/: BaseCharacter.h
src/Plugins/Plugin/World/Enemy/: Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h
src/Plugins/Plugin/World/PathFinding/: Graph.cpp  Graph.h  Node.cpp  Node.h  WayPoint.cpp  WayPoint.h
src/Plugins/Plugin/World/Tower/: TowerBase.cpp  TowerBase.h  TowerManager.cpp  TowerManager.h  TowerMelee.cpp  TowerMelee.h  TowerProjectile.cpp  TowerProjectile.h  TowerRange.cpp  TowerRange.h  TowerSupport.cpp  TowerSupport.h
src/Plugins/Plugin/World/Wave/: Wave.cpp  Wave.h  WaveManager.cpp  WaveManager.h
